# CAstroParty

./: .gitignore  CMakeLists.txt  DESIGN  DESIGN.txt  LICENSE  Makefile  README.md  devlog.txt  install-libffcall.sh  install-sdl2.sh  makefile  todo.txt
new-engine/: Makefile  README.md
new-engine/legacy/: networking.c
new-engine/src/: bullet.c  bullet.h  client_handler.c  client_handler.h  game.c  game.h  input_handler.c  input_handler.h  networking.c  networking.h  object_handler.c  object_handler.h  player.c  player.h  server_handler.c  textures.c  textures.h  vector.c  vector.h
new-engine/src/serialize/: serialization.h
new-engine/src/util/: io.c  random.h  sdl_colors.c  sdl_colors.h  sdl_utils.c  sdl_utils.h  sized_string.c  stacktrace.c  string_builder.h  string_utils.h
old/: Makefile  README.md  install-libffcall.sh  todo.txt
old/src/: bullet.h  bullets.c  client.c  game.h  game2.c  game2.h  game_client_connect.c  game_client_connect.h  game_server_init.h  networking.h  obstacle.h  obstacles.c  obstacles.h  player.h  reaction.c  reaction.h  textures.c
old/src/serialize/: buffer.c  buffer.h  game_serialization.c  game_state_serialization.h  player_serialization.h  players_serialization.c  serialization.c
old/src/util/: arg_parse.c  arg_parse.h  hash.h  sigaction.c  sigaction.h  sized_string.c  stacktrace.h  string_builder.c
src/: bullet.c  bullet.h  bullets.h  client.c  client.h  client_handler.c  client_handler.h  client_init_input.c  client_init_input.h  game.c  game.h  game2.c  game_client_connect.c  game_client_connect.h  game_packet.c  game_packet.h  game_server_init.c  input_handler.c  input_handler.h  main.c  main.c_  networking.c  networking.h  object_handler.c  object_handler.h  obstacle.c  player.c  player.h  players.c  players.h  reaction.c  reaction.h  server_handler.c  server_handler.h  textures.c  textures.h  vector.c  vector.h
src/serialize/: game_serialization.c  game_serialization.h  game_state_serialization.c  player_serialization.c  player_serialization.h  players_serialization.h
src/util/: arg_parse.c  hash.c  hash.h  io.c  io.h  random.c  sdl_colors.c  sdl_colors.h  sdl_utils.c  sdl_utils.h  sized_string.c  sized_string.h  stacktrace.c  stacktrace.c_  string_utils.c  string_utils.h  utils.c  utils.h
